--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://AnnaKarachkovska.github.io/it-pilots-project",
+  "homepage": "https://EugeniaKutsel.github.io/it-pilots-project",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /it-pilots-project/"
